--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # You need to install these with
 # pip3x install -r requirements.txt 
 
-numpy
-scipy
-matplotlib
-datetime 
+numpy==1.18.2
+scipy==1.4.1
+matplotlib==3.2.1
+datetime==4.3 
